# game_state

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: windows_build.yml
include/game/: game.hpp
include/game/states/: game_state.hpp  loading_state.hpp  options_state.hpp  play_state.hpp  splash_state.hpp  state_stack.hpp
include/rendering/: texture2d.hpp
include/rendering/ui/: imgui_manager.hpp
slides/: slides.html  slides.md
src/: main.cpp
src/game/: game.cpp
src/game/states/: state_stack.cpp
src/rendering/: texture2d.cpp
src/rendering/ui/: imgui_manager.cpp
tests/: test_state_stack.cpp
